--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,7 +8,7 @@
 
 body {
   align-items: center;
-  background: linear-gradient( #c976f3 ,#12d232);
+  background: linear-gradient( #ff0080 ,#cc00ff);
   display: flex;
   justify-content: center;
   flex-direction: column;
